--- a/Tasks.ipynb
+++ b/Tasks.ipynb
@@ -309,7 +309,7 @@
      "output_type": "stream",
      "text": [
       "1.4142489172699921340381479240022599697113037109375000000000000000000000000000000000000000000000000000\n",
-      "90.0 seconds taken\n",
+      "97.2 seconds taken\n",
       "Running our function so that the square of the calculated square root of two is between 1.999 and 2.001 provides an approximation of the square root of two to the 51th place.\n"
      ]
     }
@@ -344,7 +344,14 @@
     "1. The number of decimal places remains the same (51) despite varying precision demands, indicating that there is a limit to the number of decimal places that a float is capable of storing.\n",
     "2. The computational expense of calculating the square root of two increases very quickly with respect to an increased demand for precision (from 0.0 seconds at 0.1 precision to 1.1 seconds at 0.001 precision to approximately 100 seconds at 0.0001 precision). If one tries to attain an even greater precision, one will see that the function simply times out, i.e. the precision cannot be attained by Python's float datatype.\n",
     "\n",
-    "*The conclusion from this is thus that it is not possible to use the float datatype to calculate the square root of 2 to 100 decimal places."
+    "*The conclusion from this is thus that it is not possible to use the float datatype to calculate the square root of 2 to 100 decimal places.*\n",
+    "\n",
+    "It is important to note, however, that the problem is not with the Python operators (-, * and /) or loops, but only the float datatype itself. This means that if we could somehow use the other numerical datatype that does not need to be imported in Python, i.e. the integer, to perform the calculation, we should not have a problem - except, that is, for the fact that the integer datatype by does not cater to decimal places.\n",
+    "\n",
+    "The trick, then, is to forget about decimal places during the calculation itself, and then insert the decimal place afterwards using the string datatype. What if, instead of calculating the square root of two, we calculated the first hundred digits of the square root of:\n",
+    "$$2\\times10^{100000000}$$\n",
+    " \n",
+    "Looking at the two numbers as strings, the only difference would be that one has a '.' and the other does not; and because integers have exact representations in Python's integer datatype, we should not come across any imprecision as we would have using the float datatype."
    ]
   },
   {
@@ -477,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -578,30 +585,26 @@
     "To demonstrate that dividing by the degrees of freedom provides a more accurate standard deviation value than dividing by the size of the sample, I will do the following:\n",
     "\n",
     "1. Simulate a normally distribute dataset using numpy.random's normal() function, which takes in the standard deviation as a parameter.\n",
-    "1. Manually calculate the standard deviation of the population according to both the population and sample formulas. The population formula should be closer to the inputted standard deviation.\n",
+    "1. Manually calculate the standard deviation of the population according to both formulas, using 1,000 different samples, to calculate the percentage of times which formula was more accurate.\n",
+    "1. To make the demonstration even more interesting, we can perform step 2 for twice, where one time we use the population mean to calculate the standard deviation, and the other time we use the sample mean. We would expect that while the (n-1) calculation would be more accurate when using the sample mean in the calculation, the results are likely to be more evenly split when using the population mean. This is because when we use the sample mean, then the degrees of freedom is equal to n - 1, whereas when we use the population mean, the degrees of freedom is equal to n.\n",
     "\n",
     "[1] https://www.youtube.com/watch?v=wpY9o_OyxoQ"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Actual standard deviation is 70\n",
-      "Standard deviation calculated using the population formula is: 69.75789029982327\n",
-      "Standard deviation calculated using the sample formula is: 69.7507222835877\n",
-      "When calculating the standard deviation of a population, the population formula produced the most accurate result\n",
+      "When calculating the standard deviation of the population using the population mean and a sample, across 1,000 samples, the results are as follows:\n",
+      "The STDDEV.S - np.sqrt(np.sum((x - np.mean(x))**2)/(len(x)-1)) - calculation was more accurate 50.2% of the time.\n",
       "\n",
-      "Taking a sample of size 316 from the population, the results are as follows:\n",
-      "\n",
-      "Standard deviation calculated using the population formula is: 62.17862208428696\n",
-      "Standard deviation calculated using the sample formula is: 62.17058021524793\n",
-      "When calculating the standard deviation of a sample, the population formula produced the result closest to the standard deviation of the population.\n"
+      "When calculating the standard deviation of the population using a sample and its sample mean, across 1,000 samples, the results are as follows:\n",
+      "The STDDEV.S calculation was more accurate 97.9% of the time.\n"
      ]
     }
    ],
@@ -610,42 +613,28 @@
     "import math\n",
     "rng = np.random.default_rng()\n",
     "\n",
-    "mu, sigma, n = 100, 70, 100000 # mean, standard deviation and size\n",
-    "norm = rng.normal(mu, sigma, n)\n",
-    "print(f'Actual standard deviation is {sigma}')\n",
     "\n",
-    "popstd = np.sqrt((sum(abs(norm - mu)**2))/n)\n",
-    "print(f'Standard deviation calculated using the population formula is: {popstd}')\n",
-    "\n",
-    "sampstd = np.sqrt((sum(abs(norm - mu)**2))/n-1)\n",
-    "print(f'Standard deviation calculated using the sample formula is: {sampstd}')\n",
-    "\n",
-    "if abs(sigma - popstd) < abs(sigma - sampstd):\n",
-    "    print('When calculating the standard deviation of a population, the population formula produced the most accurate result\\n')\n",
-    "else:\n",
-    "    print('When calculating the standard deviation of a population, the sample formula produced the most accurate result\\n')\n",
+    "mu, sigma, n = 10, 3, 10000 # mean, standard deviation and size of dataset\n",
+    "print(f'When calculating the standard deviation of the population using the population mean and a sample, across 1,000 samples, the results are as follows:')\n",
+    "answer = 0\n",
+    "for i in range(1000):\n",
+    "    norm = rng.normal(mu, sigma, n)\n",
+    "    popstd = np.sqrt((sum(abs(norm - mu)**2))/len(norm))\n",
+    "    sampstd = np.sqrt((sum(abs(norm - mu)**2))/(len(norm)-1))\n",
+    "    if abs(sigma - popstd) < abs(sigma - sampstd):\n",
+    "            answer+=1\n",
+    "print(f'The STDDEV.S - np.sqrt(np.sum((x - np.mean(x))**2)/(len(x)-1)) - calculation was more accurate {answer/10}% of the time.')\n",
     "    \n",
     "n = int(n/math.sqrt(n))\n",
-    "print(f'Taking a sample of size {n} from the population, the results are as follows:\\n')\n",
-    "norm = np.random.choice(norm, size=n)\n",
-    "popstd = np.sqrt(np.sum((norm - np.mean(norm))**2)/len(norm))\n",
-    "print(f'Standard deviation calculated using the population formula is: {popstd}')\n",
-    "\n",
-    "sampstd = np.sqrt(np.sum((norm - np.mean(norm))**2)/len(norm)-1)\n",
-    "print(f'Standard deviation calculated using the sample formula is: {sampstd}')\n",
-    "\n",
-    "if abs(sigma - popstd) < abs(sigma - sampstd):\n",
-    "    print('When calculating the standard deviation of a sample, the population formula produced the result closest to the standard deviation of the population.')\n",
-    "else:\n",
-    "    print('When calculating the standard deviation of a sample, the sample formula produced the result closest to the standard deviation of the population')"
+    "print(f'\\nWhen calculating the standard deviation of the population using a sample and its sample mean, across 1,000 samples, the results are as follows:')\n",
+    "for i in range(1000):\n",
+    "    norm = rng.normal(mu, sigma, n)\n",
+    "    popstd = np.sqrt(np.sum((norm - np.mean(norm))**2)/len(norm))\n",
+    "    sampstd = np.sqrt(np.sum((norm - np.mean(norm))**2)/(len(norm)-1))\n",
+    "    if abs(sigma - popstd) < abs(sigma - sampstd):\n",
+    "        answer+=1\n",
+    "print(f'The STDDEV.S calculation was more accurate {answer/10}% of the time.')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
