finished editing jupyter notebook

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -802,13 +802,7 @@
       "11/11 [==============================] - 0s 1ms/step - loss: 77.5476\n",
       "Epoch 197/350\n",
       "11/11 [==============================] - 0s 1ms/step - loss: 77.0068\n",
-      "Epoch 198/350\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 198/350\n",
       "11/11 [==============================] - 0s 1ms/step - loss: 77.3869\n",
       "Epoch 199/350\n",
       "11/11 [==============================] - 0s 1ms/step - loss: 77.5858\n",
@@ -1668,13 +1662,7 @@
       "11/11 [==============================] - 0s 1ms/step - loss: 17.9176\n",
       "Epoch 99/350\n",
       "11/11 [==============================] - ETA: 0s - loss: 22.15 - 0s 2ms/step - loss: 17.8405\n",
-      "Epoch 100/350\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 100/350\n",
       "11/11 [==============================] - 0s 1ms/step - loss: 17.9314\n",
       "Epoch 101/350\n",
       "11/11 [==============================] - 0s 1ms/step - loss: 18.2403\n",
@@ -2072,13 +2060,7 @@
       "11/11 [==============================] - 0s 2ms/step - loss: 17.7736\n",
       "Epoch 295/350\n",
       "11/11 [==============================] - 0s 2ms/step - loss: 17.9888\n",
-      "Epoch 296/350\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 296/350\n",
       "11/11 [==============================] - 0s 2ms/step - loss: 19.3485\n",
       "Epoch 297/350\n",
       "11/11 [==============================] - 0s 2ms/step - loss: 17.8972\n",
@@ -2258,7 +2240,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On this occasion, the loss on the training set is much less, and the testing set has similar levels of loss. If we look at the graph, the underestimating of power when speed is greater than 16 has mostly disappeared. We thus appear to have a better model, but only if we assume that the zero-power points we removed were illegitimate measurements, and that is not necessarily a legitimate assumption."
+    "On this occasion, the mean squared error is far smaller, hence we have a more accurate model. If we look at the graph, the underestimating of power when speed is greater than 16 has mostly disappeared. We thus appear to have a better model, but only if we assume that the zero-power points we removed were illegitimate measurements, and that is not necessarily a legitimate assumption."
    ]
   },
   {
