--- a/Project.ipynb
+++ b/Project.ipynb
@@ -1203,7 +1203,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our model has a mean square error of almost 100 when operating on our training set, it has a lower error value of around 20 on our testing set. This is a good indication that we haven't overfitted our model. What is interesting is for values of speed greater than around 16, our model appears to consistently underestimate power. This is possibly due to thethree data points that have speed values of greater than 16 but power values of zero. If we remove those values from the dataset, we will likely get a 'better fitting' model. We can try this now, although even if we arrive at a better model, the removal of those anomolous data points is still not likely justified, as they may indeed be legimitate values that will simply be intractable for a model that only looks as speed and power"
+    "What is interesting is for values of speed greater than around 16, our model appears to consistently underestimate power. This is possibly due to thethree data points that have speed values of greater than 16 but power values of zero. If we remove those values from the dataset, we will likely get a 'better fitting' model. We can try this now, although even if we arrive at a better model, the removal of those anomolous data points is still not likely justified, as they may indeed be legimitate values that will simply be intractable for a model that only looks as speed and power"
    ]
   },
   {
